# minify-html-ssr

./: Cargo.toml  README.md
benchmarks/: bench.sh  log.txt
src/: lib.rs  writable.rs
test/: test-asian-chars.html  test-input-bad.html  test-input.html
