[package]
name = "minify-html-ssr"
description = "Minify your HTML in Nodejs"
repository = "https://github.com/snewcomer/minify-html-ssr"
license = "MIT"
version = "0.2.0"
authors = ["scott-newcomer <snewcomer24@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "minify_html_ssr"
src = "src/lib.rs"

[[bin]]
name = "minify_html_ssr"
src = "src/bin"

[dependencies]
wasm-bindgen = "0.2.73"
